fixed alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   display: flex;
   margin: 0 auto;
   padding: 0 15px;
-  width: 80%;
   justify-content: space-between;
 }
 
